- add new images - clean up - fix image cut off

--- a/assets/css/partials/_home.scss
+++ b/assets/css/partials/_home.scss
@@ -1,7 +1,17 @@
 .home-img-box {
   background-position: center;
+  background-repeat: no-repeat;
   background-size: cover;
   height: 500px;
+  
+  &.sm-contain {
+    background-size: contain;
+    height: 375px;
+
+    @include media-breakpoint-up(sm) {
+      background-size: cover;
+    }
+  }
 }
 
 .home-text-box {
